# vnplayer

./: CMakeLists.txt  INSTALL.txt  Makefile.am  README.md  build.sh  configure.ac  tinyxml.h  vnplayer2.cpp
engine/: CActivity.cpp  CActivity.h  CAttr.cpp  CAttr.h  CCheckpoint.cpp  CCheckpoint.h  CChoice.cpp  CChoice.h  CCommon.cpp  CCommon.h  CContext.cpp  CContext.h  CCurrentContext.cpp  CCurrentContext.h  CEffect.cpp  CEffect.h  CFrame.cpp  CFrame.h  CLayer.cpp  CLayer.h  CMisc.cpp  CMisc.h  CMusicEffect.cpp  CMusicEffect.h  CMusicInfo.cpp  CMusicInfo.h  CObject.cpp  CObject.h  COutputLog.cpp  COutputLog.h  COverlay.cpp  COverlay.h  CPage.cpp  CPage.h  CPageAction.cpp  CPageAction.h  CParagraph.cpp  CParagraph.h  CScene.cpp  CScene.h  (+12 more)
resources/: script.xml  script_tears01-vnp.xml
